--- a/latihan7/buburmanado.html
+++ b/latihan7/buburmanado.html
@@ -9,27 +9,37 @@
     <title>Bubur Manado</title>
   </head>
   <body>
-    <div class="row">
-      <a href="indexresep.html">&lt;&lt;Daftar Resep</a><hr>
+    <nav class="bluechef" role="navigation">
+      <div class="nav-wrapper container">
+        <a href="#" class="brand-logo">MASTER CHEF</a>
+        <ul class="right hide-on-med-and-down">
+          <li><a href="index.html">Beranda</a></li>
+          <li><a href="tujuanweb.html">Tentang Website</a></li>
+          <li><a href="tentangstmikkharisma.html">Tentang STMIK KHARISMA</a></li>
+        </ul>
 
-    <h3 class=" heading red-text">Bubur Manado</h3>
-    <div class="col m5 s12">
-      <div class="card z-depth-3">
-        <div class="card-image">
-    <img src="img/buburmanado.jpg" alt="buburmanado" class="img-responsif">
-  </div>
-</div>
-</div>
-<div class="col m7 s12">
+        <ul id="nav-mobile" class="sidenav">
+      <li><a href="index.html">Beranda</a></li>
+      <li><a href="tujuanweb.html">Tentang Website</a></li>
+      <li><a href="tentangstmikkharisma.html">Tentang STMIK KHARISMA</a></li>
+      </ul>
+      <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i
+      class="material-icons">menu</i></a>
+    </div>
+    </nav>
+
+    <div class="container">
+    <h1 class="red-text">Bubur Manado</h1>
+    <img class="blockmenu"src="img/buburmanado.jpg" alt="buburmanado" class="gambar-resep">
     <p>Kata tinutuan tidak diketahui asalnya.Sejak kapan tinutuan menjadi makanan khas Kota Manado tidak diketahui dengan jelas.Ada yang mengatakan tinutuan mulai ramai diperdagangkan di beberapa tempat di sudut Kota Manado sejak tahun 1970.
        Ada juga yang mengatakan sejak tahun 1981.Tinutuan dipakai menjadi moto Kota Manado sejak kepemimpinan Wali Kota Jimmy Rimba Rogi dan Wakil Wali Kota Abdi Wijaya Buchari periode 2005-2010, menggantikan moto Kota Manado sebelumnya yaitu Berhikmat.
        Pemerintah Kota Manado melalui Dinas Pariwisata setempat pada tahun 2004 (ada juga yang mengatakan pada pertengahan tahun 2005) menjadikan Kawasan Wakeke, Kecamatan Wenang, Kota Manado, sebagai lokasi wisata makanan khas tinutuan.</p>
-<p>Bubur Manado alias tinutuan adalah jenis bubur gurih dari Sulawesi Utara. <a class="nav" href="#bahan/bubur">Bubur</a> ini menggunakan sayuran berlimpah, labu, jagung, dan singkong. Biasanya disertakan pula daun gedi.
-      Bubur Manado disajikan bersama sambal bekasang, sejenis terasi yang dibuat dari perut <a class="nav" href="#bahan/ikan">ikan</a> fermentasi. Masih ditambah ikan asin yang digoreng renyah.</p>
-</div>
-</div>
-<div class="row">
-<h5 class="red-text">Bahan Utama</h5>
+<p>Bubur Manado alias tinutuan adalah jenis bubur gurih dari Sulawesi Utara. <a href="bahan/bubur.html">Bubur</a> ini menggunakan sayuran berlimpah, labu, jagung, dan singkong. Biasanya disertakan pula daun gedi.
+      Bubur Manado disajikan bersama sambal bekasang, sejenis terasi yang dibuat dari perut <a href="bahan/ikan.html">ikan</a> fermentasi. Masih ditambah ikan asin yang digoreng renyah.</p>
+<ul class="collapsible">
+  <li>
+<div class="collapsible-header"><i class="material-icons">search</i>Bahan Utama</div>
+<div class="collapsible-body">
 <ol>
 <li> 200 gram beras.</li>
 <li> 2 buah jagung manis dipipil.</li>
@@ -38,8 +48,12 @@
 <li> 1 kg labu kuning, kukus dan lumatkan dengan garpu.</li>
 <li> 4 liter air atau tambahkan sesuai kebutuhan.</li>
 </ol>
+</div>
+</li>
 
-<h5 class="red-text">Bahan Sayur</h5>
+<li>
+<div class="collapsible-header"><i class="material-icons">search</i>Bahan Sayur</div>
+<div class="collapsible-body">
 <ol>
 <li> 5 lembar daun gedi,rajang halus.</li>
 <li> 1 lembar daun kunyit,rajang sehalus mungkin.</li>
@@ -48,9 +62,12 @@
 <li> 1 ikat kecil bayam, ambil daun.</li>
 <li> 1 mangkuk kemangi, dari 5 ikat kecil kemangi, ambil daun dan pucuk mudanya saja.</li>
 </ol>
+</div>
+</li>
 
-
-<h5 class="red-text">Bahan Bumbu</h5>
+<li>
+<div class="collapsible-header"><i class="material-icons">search</i>Bahan Bumbu</div>
+<div class="collapsible-body">
 <ol>
 <li> 5 batang serai, ambil bagian putihnya saja dan memarkan.</li>
 <li> 1 sdm garam.</li>
@@ -58,15 +75,22 @@
 <li> 6 bawang putih, cincang halus.</li>
 <li> 6 bawang merah iris tipis.</li>
 </ol>
+</div>
+</li>
 
-<h5 class="red-text">Bumbu Pelengkap</h5>
+<li>
+<div class="collapsible-header"><i class="material-icons">search</i>Bumbu Pelengkap</div>
+<div class="collapsible-body">
 <ol>
 <li> sambal dabu dabu atau sambal korek.</li>
 <li> ikan asin goreng.</li>
 </ol>
+</div>
+</li>
 
-
-<h5 class="red-text">Cara Memasak</h5>
+<li>
+<div class="collapsible-header"><i class="material-icons">search</i>Cara Memasak</div>
+<div class="collapsible-body">
 <ol>
 <li> Cuci bersih beras,lalu di panci masukkan air, beras, singkong, ubi masak dengan api kecil sampai singkong dan ubi lembut.</li>
 <li> Masukkan bawang putih, bawang merah, daun salam dan serai sambil terus diaduk, masukkan jagung dan labu kuning.</li>
@@ -74,6 +98,21 @@
 <li> Setelah beras sudah menjadi bubur terakhir masukan semua sayuran aduk rata, koreksi rasa, angkat.</li>
 </ol>
 </div>
+</li>
+</ul>
 </div>
+
+<nav class="bluechef">
+<div class="nav-wrapper container" role="navigation">
+  <a href = "index.html">&lt;&lt;Kembali ke halaman utama</a>
+  <a href = "sotopadang.html">&lt;Back</a>
+  <a href="#top">|Kembali Ke Atas|</a>
+  <a href = "sopkonro.html">Next&gt;&gt;</a>
+</div>
+</nav>
+
+<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+<script type="text/javascript" src="js/materialize.min.js"></script>
+<script type="text/javascript" src="js/init.js"></script>
   </body>
 </html>
