--- a/latihan7/nasibakeporkalimantantimur.html
+++ b/latihan7/nasibakeporkalimantantimur.html
@@ -9,19 +9,29 @@
     <title>Nasi bakepor Kalimantan Timur</title>
   </head>
   <body>
-  <div class="row">
-    <a href="indexresep.html">&lt;&lt;Daftar Resep</a><hr>
+    <nav class="bluechef" role="navigation">
+      <div class="nav-wrapper container">
+        <a href="#" class="brand-logo">MASTER CHEF</a>
+        <ul class="right hide-on-med-and-down">
+          <li><a href="index.html">Beranda</a></li>
+          <li><a href="tujuanweb.html">Tentang Website</a></li>
+          <li><a href="tentangstmikkharisma.html">Tentang STMIK KHARISMA</a></li>
+        </ul>
 
-<h3 class=" heading red-text">Nasi bakepor Kalimantan Timur</h3>
-<div class="col m5 s12">
-  <div class="card z-depth-3">
-    <div class="card-image">
-<img src="img/nasibakepor.jpg" alt="nasibakepor" class="img-responsif">
-</div>
-</div>
-</div>
-<div class="col m7 s12">
-<p>Nasi Bekepor khas Kutai Kartanegara merupakan nasi yang dicampur dengan <a class="nav" href="#bahan/ikanasin">ikan asin</a>, rempah-rempah, dan minyak sayur.
+        <ul id="nav-mobile" class="sidenav">
+          <li><a href="index.html">Beranda</a></li>
+      <li><a href="tujuanweb.html">Tentang Website</a></li>
+      <li><a href="tentangstmikkharisma.html">Tentang STMIK KHARISMA</a></li>
+      </ul>
+      <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i
+      class="material-icons">menu</i></a>
+    </div>
+    </nav>
+
+    <div class="container">
+<h1 class="red-text">Nasi bakepor Kalimantan Timur</h1>
+<img class="blockmenu"src="img/nasibakepor.jpg" alt="nasibakepor" class="gambar-resep">
+<p>Nasi Bekepor khas Kutai Kartanegara merupakan nasi yang dicampur dengan <a href="bahan/ikanasin.html">ikan asin</a>, rempah-rempah, dan minyak sayur.
 Nasi Bekepor biasanya disajikan bersama dengan sayur gangan asam kukar yang merupakan sejenis sayur asem yang diolah bersama dengan kepala ikan dan ubi manis. </p>
 <p>Pada masa zaman Kerajaan Kutai Kartanegara, nasi bekepor merupakan menu khas bagi Raja Kutai Kartanegara, namun kini nasi bekepor bisa dinikmati semua kalangan.
 
@@ -34,11 +44,11 @@ Proses memutar inilah yang disebut dengan bekepor.
 Ketika diputar, dibacakan shalawat sebanyak tiga kali dan disebutkan nama seseorang yang diinginkan untuk segera bertemu seraya membayangkan wajahnya.
 
 Dan konon katanya, cara ini selalu berhasil membuat orang yang disebut namanya untuk datang menemui.</p>
-</div>
-</div>
 
-<div class="row">
-<h5 class="red-text">Bahan Utama</h5>
+<ul class="collapsible">
+  <li>
+<div class="collapsible-header"><i class="material-icons">search</i>Bahan Utama</div>
+<div class="collapsible-body">
 <ol>
 <li>300 gr beras putih, cuci bersih</li>
 <li> 2 lembar daun salam</li>
@@ -51,16 +61,23 @@ Dan konon katanya, cara ini selalu berhasil membuat orang yang disebut namanya u
 <li> 3 buah cabe rawit, iris bulat tipis</li>
 <li> 1/2 buah jeruk nipis, ambil airnya</li>
 </ol>
+</div>
+</li>
 
-<h5 class="red-text">Bahan Sambal Raja</h5>
+<li>
+<div class="collapsible-header"><i class="material-icons">search</i>Bahan Sambal Raja</div>
+<div class="collapsible-body">
 <ol>
 <li> 1 buah terong, potong dadu 1 cm</li>
 <li> 10 lonjor kacang panjang, potong 2 cm</li>
 <li> 10 siung bawang merah, belah 4</li>
 </ol>
+</div>
+</li>
 
-
-<h5 class="red-text">Bahan Bumbu Halus</h5>
+<li>
+<div class="collapsible-header"><i class="material-icons">search</i>Bahan Bumbu Halus</div>
+<div class="collapsible-body">
 <ol>
 <li> 10 buah cabe rawit</li>
 <li> 10 buah cabe merah besar, buang biji</li>
@@ -69,9 +86,12 @@ Dan konon katanya, cara ini selalu berhasil membuat orang yang disebut namanya u
 <li> 1 sdt garam</li>
 <li> 1 sdm gula pasir</li>
 </ol>
+</div>
+</li>
 
-
-<h5 class="red-text">Cara Memasak</h5>
+<li>
+<div class="collapsible-header"><i class="material-icons">search</i>Cara Memasak</div>
+<div class="collapsible-body">
 <ol>
 <li> Goreng ikan asin gabus. Angkat. Tiriskan. Suwir - suwir. Sisihkan</li>
 <li> Nasi Bakepor : Siapkan panci tebal. Masukkan ke dalamnya beras, air, minyak, daun salam, daun pandan, dan garam.</li>
@@ -87,6 +107,21 @@ Dan konon katanya, cara ini selalu berhasil membuat orang yang disebut namanya u
 <li> Penyajian : Hidangkan Nasi Bakepor hangat hangat dengan sambal Raja</li>
 </ol>
 </div>
+</li>
+</ul>
 </div>
+
+<nav class="bluechef">
+  <div class="nav-wrapper container" role="navigation">
+    <a href="index.html">&lt;&lt;Kembali Ke Halaman Utama</a>
+    <a href = "ayamlodhokhastulungagung.html">&lt;Back</a>
+    <a href="#top"> |Kembali Ke Atas|</a>
+    <a href="papedatelorayam.html">Next&gt;&gt;</a>
+  </div>
+</nav>
+
+<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+<script type="text/javascript" src="js/materialize.min.js"></script>
+<script type="text/javascript" src="js/init.js"></script>
   </body>
 </html>
