--- a/latihan7/pallubasa.html
+++ b/latihan7/pallubasa.html
@@ -9,31 +9,38 @@
     <title> Pallubasa</title>
 </head>
 <body>
-<div class="row">
-  <a href="indexresep.html">&lt;&lt; Daftar Resep</a><hr>
-<h3 class=" heading red-text">Pallubasa</h3>
-<div class="col m5 s12">
-  <div class="card z-depth-3">
-    <div class="card-image">
-<img src="img/pallubasa.jfif" alt="pallubasa" class="img-responsif">
-</div>
-</div>
-</div>
-<div class="col m7 s12">
+  <nav class="bluechef" role="navigation">
+    <div class="nav-wrapper container">
+      <a href="#" class="brand-logo">Master Chef</a>
+      <ul class="right hide-on-med-and-down">
+        <li><a href="index.html">Beranda</a></li>
+        <li><a href="tujuanweb.html">Tentang Website</a></li>
+          <li><a href="tentangstmikkharisma.html">Tentang STMIK KHARISMA</a></li>
+        </ul>
+        <ul id="nav-mobile" class="sidenav">
+          <li><a href="index.html">Beranda</a></li>
+          <li><a href="tujuanweb.html">Tentang Website</a></li>
+            <li><a href="tentangstmikkharisma.html">Tentang STMIK KHARISMA</a></li>
+          </ul>
+        <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+      </div>
+    </nav>
+
+<div class="container">
+<h1 class="red-text">Pallubasa</h1>
+<img class="blockmenu" src="img/pallubasa.jfif" alt="pallubasa" class="gambar-resep">
 <p> Pallu basa adalah makanan tradisional Makassar, Sulawesi Selatan. Seperti Coto Mangkasara (Coto Makassar),
-Pallubasa juga terbuat dari jeroan (isi dalam perut) <a class="nav" href="#bahan/dagingsapi">daging sapi</a> atau daging kerbau. Namun kini kuliner ini telah berkembang menjadi
-pallu basa <a class="nav" href="#bahan/ayam">ayam</a> dan pallu basa kepala <a class="nav" href="#bahan/ikan">ikan</a>. Proses memasaknya pun hampir sama dengan Coto Makassar yang
+Pallubasa juga terbuat dari jeroan (isi dalam perut) <a href="bahan/dagingsapi.html">daging sapi</a> atau daging kerbau. Namun kini kuliner ini telah berkembang menjadi
+pallu basa <a href="bahan/ayam.html">ayam</a> dan pallu basa kepala <a href="bahan/ikan.html">ikan</a>. Proses memasaknya pun hampir sama dengan Coto Makassar yang
 lebih terkenal, yakni jeroan direbus dalam waktu lama.</p>
  <p>Dahulu, Pallubasa dengan daging sapi sirloin dan tenderloin hanya disajikan untuk disantap oleh keluarga kerajaan, sementara bagian jeroan disajikan untuk masyarakat kelas bawah atau abdi dalem pengikut kerajaan.
 Kini, penjual-penjual Pallubasa memberikan bermacam-macam pilihan daging sapi atau jeroan untuk dihidangkan.
 Yang membedakan Pallubasa dengan Coto Makassar adalah bumbunya yang diracik khusus. Selain itu, Coto Makassar dimakan bersama ketupat, sementara Pallubasa dimakan bersama nasi putih.</p>
-</div>
-</div>
-
-<div class="row">
-<div class="content text-resep">
-
-    <h5 class="red-text">Bahan Utama</h5>
+<ul class="collapsible">
+  <li>
+    <div class="collapsible-header"><i class="material-icons">search</i>Bahan Utama</div>
+    <div class="collapsible-body">
+          <span>
             <ol>
           <li> Daging sapi - 250 gram</li>
           <li> Kaldu sapi - 600 ml</li>
@@ -48,9 +55,14 @@ Yang membedakan Pallubasa dengan Coto Makassar adalah bumbunya yang diracik khus
           <li> Penyedap rasa (opsional) - 1 sdt</li>
           <li> Minyak, untuk menumis - 3 sdm </li>
         </ol>
+      </span>
+      </div>
+    </li>
 
-
-  <h5 class="red-text">Bahan Bumbu</h5>
+    <li>
+<div class="collapsible-header"><i class="material-icons">search</i>Bumbu</div>
+<div class="collapsible-body">
+  <span>
   <ol>
   <li> Bawang putih - 5 siung</li>
   <li> Bawang merah - 8 butir</li>
@@ -60,17 +72,28 @@ Yang membedakan Pallubasa dengan Coto Makassar adalah bumbunya yang diracik khus
   <li> Ketumbar - 1 sdt</li>
   <li> Jinten - 1/2 sdt</li>
 </ol>
+</span>
+</div>
+</li>
 
-<h5 class="red-text">Bahan Pelengkap</h5>
+<li>
+<div class="collapsible-header"><i class="material-icons">search</i>Bahan Pelengkap</div>
+<div class="collapsible-body">
+  <span>
   <ol>
     <li> Bawang goreng - secukupnya</li>
     <li> Irisan jeruk nipis - secukupnya</li>
     <li> Sambal - secukupnya</li>
     <li> Kecap – secukupnya</li>
   </ol>
+</span>
+</div>
+</li>
 
-
-<h5 class="red-text">Cara Membuat</h5>
+<li>
+<div class="collapsible-header"><i class="material-icons">search</i>Cara Membuat</div>
+<div class="collapsible-body">
+  <span>
   <ol>
     <li> Rebus daging sapi hingga empuk. Angkat dan dinginkan, lalu potong-potong kotak. Sisihkan 600 ml air sisa
       rebusan daging sebagai kaldu sapi.</li>
@@ -81,14 +104,36 @@ Yang membedakan Pallubasa dengan Coto Makassar adalah bumbunya yang diracik khus
           dan kuah mengental. Angkat.</li>
           <li> Siap disajikan.</li>
         </ol>
+      </span>
+      </div>
+    </li>
 
-    <h5 class="red-text">Tips</h5>
+    <li>
+<div class="collapsible-header"><i class="material-icons">search</i>Tips</div>
+<div class="collapsible-body">
+  <span>
   <ol>
     <li> Jika suka, anda bisa menggunakan jeroan sapi sesuai selera.</li>
     <li> Daging bisa dimasak menggunakan panci presto agar lebih cepat empuk.</li>
     <li> Pallu basa biasa disajikan dengan kuning telur ayam mentah.</li>
 </ol>
+</span>
 </div>
+</li>
+</ul>
 </div>
+<nav class="bluechef">
+  <div class="nav-wrapper container" role="navigation">
+<a href = "index.html">&lt;&lt;Kembali Ke halaman utama</a>
+<a href="#top">|Kembali Ke Atas|</a>
+  <a href = "sotopadang.html">Next&gt;&gt;</a>
+</div>
+</nav>
+
+<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+<script type="text/javascript" src="js/materialize.min.js"></script>
+<script type="text/javascript" src="js/init.js"></script>
+
+
 </body>
 </html>
