--- a/latihan7/rawonsurabaya.html
+++ b/latihan7/rawonsurabaya.html
@@ -9,24 +9,34 @@
     <title>Rawon Surabaya</title>
   </head>
   <body>
-    <div class="row">
-      <a href="indexresep.html">&lt;&lt;Daftar Resep</a><hr>
+    <nav class="bluechef" role="navigation">
+      <div class="nav-wrapper container">
+        <a href="#" class="brand-logo">MASTER CHEF</a>
+        <ul class="right hide-on-med-and-down">
+          <li><a href="index.html">Beranda</a></li>
+          <li><a href="tujuanweb.html">Tentang Website</a></li>
+          <li><a href="tentangstmikkharisma.html">Tentang STMIK KHARISMA</a></li>
+        </ul>
 
-    <h3 class="heading red-text">Rawon Surabaya</h3>
-    <div class="col m5 s12">
-      <div class="card z-depth-3">
-        <div class="card-image">
-    <img src="img/rawon.jpg" alt="rawon" class="img-responsif">
-  </div>
-</div>
-</div>
-<div class="col m7 s12">
+        <ul id="nav-mobile" class="sidenav">
+          <li><a href="index.html">Beranda</a></li>
+      <li><a href="tujuanweb.html">Tentang Website</a></li>
+      <li><a href="tentangstmikkharisma.html">Tentang STMIK KHARISMA</a></li>
+      </ul>
+      <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i
+      class="material-icons">menu</i></a>
+    </div>
+    </nav>
+
+    <div class="container">
+    <h1 class="red-text">Rawon Surabaya</h1>
+    <img class="blockmenu"src="img/rawon.jpg" alt="rawon" class="gambar-resep">
     <p>Resep rawon daging sapi bisa kamu terapkan sebagai sajian Idul Adha. Rawon merupakan hidangan berkuah seperti sup yang berisi potongan lembut daging serta aroma dan warna hitam khas dari buah keluak. Rawon merupakan makanan khas dari Jawa Timur. Rasanya yang begitu menggugah selera membuatnya digemari banyak orang. Bahkan tidak hanya orang Surabaya atau Jawa Timur saja yang gemar menyantapnya, orang-orang dari luar Pulau Jawa, bahkan orang asing dari luar negeri pun menyukainya.</p>
-<p>Resep rawon <a class="nav" href="#bahan/dagingsapi">daging sapi</a> yang enak juga cukup mudah dibuat. Kamu bisa menjadikan daging sapi kurban menjadi santapan yang lezat ini. Idealnya rawon dibuat dari daging sandung lamur atau di dunia kuliner dikenal dengan brisket, yang sedikit berlemak dan enak dimasak lama. Namun, kamu juga bisa menggunakan bagian-bagian lainnya sesuai selera.</p>
-</div>
-</div>
-<div class="row">
-<h5 class="red-text">Bahan Utama</h5>
+<p>Resep rawon <a href="bahan/dagingsapi.html">daging sapi</a> yang enak juga cukup mudah dibuat. Kamu bisa menjadikan daging sapi kurban menjadi santapan yang lezat ini. Idealnya rawon dibuat dari daging sandung lamur atau di dunia kuliner dikenal dengan brisket, yang sedikit berlemak dan enak dimasak lama. Namun, kamu juga bisa menggunakan bagian-bagian lainnya sesuai selera.</p>
+<ul class="collapsible">
+  <li>
+<div class="collapsible-header"><i class="material-icons">search</i>Bahan Utama</div>
+<div class="collapsible-body">
     <ol>
 <li>500 gram daging sapi, bagian sandung lumur</li>
 <li>Air untuk merebus daging</li>
@@ -49,24 +59,45 @@
 <li>2 mata asam jawa, larutkan dengan 1 sdm air</li>
 <li>5 lembar daun jeruk purut</li>
 </ol>
+</div>
+</li>
 
-
-<h5 class="red-text">Bahan Pelengkap</h5>
+<li>
+<div class="collapsible-header"><i class="material-icons">search</i>Bahan Pelengkap</div>
+<div class="collapsible-body">
 <ol>
 <li>Tauge pendek/kecambah</li>
 <li>Telur bebek asin</li>
 <li>Sambal terasi</li>
 <li>Kerupuk ikan</li>
 </ol>
+</div>
+</li>
 
-
-<h5 class="red-text">Cara Memasak</h5>
+<li>
+<div class="collapsible-header"><i class="material-icons">search</i>Cara Memasak</div>
+<div class="collapsible-body">
 <ol>
 <li>Cuci daging sampai bersih, rebus sampai matang. Angkat dan tiriskan daging, lalu potong ukuran dadu. Sisihkan daging dan air kaldunya.</li>
 <li>Panaskan minyak, tumis bumbu halus sampai harum dan matang. Masukkan daging, serai, daun jeruk, air asam, dan garam. Aduk sampai rata dan beraroma.</li>
 <li>Pukul-pukul daging sampai melebar. Goreng dalam minyak panas sebentar, angkat. Taburi dengan bawang goreng</li>
 </ol>
 </div>
+</li>
+</ul>
 </div>
+
+<nav class="bluechef">
+  <div class="nav-wrapper container" role="navigation">
+    <a href="index.html">&lt;&lt;Kembali Ke Halaman Utama</a>
+  <a href = "sopkonro.html">&lt;Back</a>
+  <a href="#top">|Kembali Ke Atas|</a>
+  <a href="ayamgorengsasandokhasnusatenggaratimur.html">Next&gt;&gt;</a>
+</div>
+</nav>
+
+<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+<script type="text/javascript" src="js/materialize.min.js"></script>
+<script type="text/javascript" src="js/init.js"></script>
   </body>
 </html>
