--- a/latihan7/satelilitayamkhasbali.html
+++ b/latihan7/satelilitayamkhasbali.html
@@ -9,30 +9,40 @@
     <title>Sate lilit ayam khas Bali</title>
   </head>
   <body>
-  <div class="row">
-    <a href="indexresep.html">&lt;&lt;Daftar Resep</a><hr>
+    <nav class="bluechef" role="navigation">
+      <div class="nav-wrapper container">
+        <a href="#" class="brand-logo">MASTER CHEF</a>
+        <ul class="right hide-on-med-and-down">
+          <li><a href="index.html">Beranda</a></li>
+          <li><a href="tujuanweb.html">Tentang Website</a></li>
+          <li><a href="tentangstmikkharisma.html">Tentang STMIK KHARISMA</a></li>
+        </ul>
 
-<h3 class=" heading red-text">Sate lilit ayam khas Bali</h3>
-<div class="col m5 s12">
-  <div class="card z-depth-3">
-    <div class="card-image">
-<img src="img/sate.jpg" alt="sate" class="img-responsif">
-</div>
-</div>
-</div>
-<div class="col m7 s12">
-<p> <a class="nav" href="#bahan/ayam">Ayam</a> merupakan salah satu bahan masakan yang bisa diolah menjadi berbagai masakan lezat dan menggugah selera.
+        <ul id="nav-mobile" class="sidenav">
+          <li><a href="index.html">Beranda</a></li>
+      <li><a href="tujuanweb.html">Tentang Website</a></li>
+      <li><a href="tentangstmikkharisma.html">Tentang STMIK KHARISMA</a></li>
+      </ul>
+      <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i
+      class="material-icons">menu</i></a>
+    </div>
+    </nav>
+
+    <div class="container">
+<h1 class="red-text">Sate lilit ayam khas Bali</h1>
+<img class="blockmenu"src="img/sate.jpg" alt="sate" class="gambar-resep">
+<p> <a href="bahan/ayam.html">Ayam</a> merupakan salah satu bahan masakan yang bisa diolah menjadi berbagai masakan lezat dan menggugah selera.
   Bisa dibuat ayam goreng, ayam kuah, ayam suwir atau sate ayam. Oh iya, kalau ngomongin sate ayam, kali ini Vemale punya resep sate ayam yang lezat dan enaknya kebangetan. </p>
   <p>Sate ayam ini merupakan sate lilit ayam khas Bali. Nggak hanya sangat enak, dipastikan sate lilit ini juga sehat dan lezat banget.
 Untuk membuat sate lilit ayam khas Bali sendiri sangat mudah kok. Mau tahu seperti apa resepnya? Berikut resepnya. </p>
-</div>
-</div>
-<div class="row">
-<h5 class="red-text">Bahan Utama</h5>
+<ul class="collapsible">
+  <li>
+<div class="collapsible-header"><i class="material-icons">search</i>Bahan Utama</div>
+<div class="collapsible-body">
 <ol>
 <li> 300 gr daging ayam (giling).</li>
 <li> 100 gr kelapa parut.</li>
-<li> 1 butir <a class="nav" href="#bahan/telur">telur</a> ayam.</li>
+<li> 1 butir telur ayam.</li>
 <li> 2 sdm tapioka.</li>
 <li> 5 siung bawang merah.</li>
 <li> 4 siung bawang putih.</li>
@@ -46,9 +56,12 @@ Untuk membuat sate lilit ayam khas Bali sendiri sangat mudah kok. Mau tahu seper
 <li> secukupnya garam & merica.</li>
 <li> 20 batang bambu atau serai.</li>
 </ol>
+</div>
+</li>
 
-
-<h5 class="red-text">Cara Memasak</h5>
+<li>
+<div class="collapsible-header"><i class="material-icons">search</i>Cara Memasak</div>
+<div class="collapsible-body">
 <ol>
 <li> Haluskan bawang merah,bawang putih, kunyit, cabai, kemiri, jahe, kencur, lengkuas dan terasi</li>
 <li> Campurkan ayam giling,telur,tapioka,dan kelapa. Beri garam dan merica secukupnya.</li>
@@ -58,6 +71,21 @@ Untuk membuat sate lilit ayam khas Bali sendiri sangat mudah kok. Mau tahu seper
 <li> Untuk Sambal matah : iris bawang merah,daun jeruk,cabai,dan batang serai bagian putihnya saja. Beri sejumput garam. panaskan 2 sdm minyak masukkan terasi. goreng hingga terasi hancur bercampur minyak. lalu campurkan pada bahan irisan. Aduk rata, siap dihidangkan.</li>
 </ol>
 </div>
+</li>
+</ul>
 </div>
+
+<nav class="bluechef">
+<div class="nav-wrapper container" role="navigation">
+  <a href = "index.html">&lt;&lt;Kembali ke halaman utama</a>
+  <a href = "seblakbandung.html">&lt;Back</a>
+  <a href="#top">|Kembali Ke Atas|</a>
+  <a href = "pallubasa.html">Next&gt;&gt;</a>
+</div>
+</nav>
+
+<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+<script type="text/javascript" src="js/materialize.min.js"></script>
+<script type="text/javascript" src="js/init.js"></script>
   </body>
 </html>
