--- a/latihan7/seblakbandung.html
+++ b/latihan7/seblakbandung.html
@@ -9,20 +9,30 @@
     <title>Seblak Bandung</title>
   </head>
   <body>
-    <div class="row">
-<a href="indexresep.html">&lt;&lt;Daftar Resep</a><hr>
+    <nav class="bluechef" role="navigation">
+      <div class="nav-wrapper container">
+        <a href="#" class="brand-logo">MASTER CHEF</a>
+        <ul class="right hide-on-med-and-down">
+          <li><a href="index.html">Beranda</a></li>
+          <li><a href="tujuanweb.html">Tentang Website</a></li>
+          <li><a href="tentangstmikkharisma.html">Tentang STMIK KHARISMA</a></li>
+        </ul>
 
-    <h3 class="heading red-text">Seblak Bandung</h3>
-    <div class="col m5 s12">
-      <div class="card z-depth-3">
-        <div class="card-image">
-    <img src="img/seblak.jpg" alt="seblak" class="img-responsif">
-  </div>
-</div>
-</div>
-<div class="col m7 s12">
+        <ul id="nav-mobile" class="sidenav">
+          <li><a href="index.html">Beranda</a></li>
+      <li><a href="tujuanweb.html">Tentang Website</a></li>
+      <li><a href="tentangstmikkharisma.html">Tentang STMIK KHARISMA</a></li>
+      </ul>
+      <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i
+      class="material-icons">menu</i></a>
+    </div>
+    </nav>
+
+    <div class="container">
+    <h1 class="red-text">Seblak Bandung</h1>
+    <img class="blockmenu"src="img/seblak.jpg" alt="seblak" class="gambar-resep">
     <p>Siapa sih yang ga tau Seblak? Sekarang, Seblak ini sudah menjadi makanan hits kekinian yang digemari oleh banyak orang selain Bakso Aci
-      dan <a class="nav" href="#bahan/ayam">Ayam</a> Geprek Mozarella.
+      dan <a href="bahan/ayam.html">Ayam</a> Geprek Mozarella.
        Anak muda khususnya generasi milenials pasti tahu dong Seblak itu apa?
         Seblak adalah salah satu makanan khas Indonesia yang berasal dari
         Jawa Barat dengan komposisi utama kerupuk basah dan tambahan bahan
@@ -30,17 +40,20 @@
         <p> Tak heran jika banyak yang mengenalnya sebagai Seblak Bandung.
          Penasaran dengan seblak Bandung seperti apa dan juga resep
           Seblak Bandung? Yuk simak ulasannya berikut ini! </p>
-        </div>
-      </div>
-      <div class="row">
-<h5 class="red-text">Bahan Utama</h5>
+<ul class="collapsible">
+  <li>
+    <div class="collapsible-header"><i class="material-icons">search</i>Bahan Utama</div>
+    <div class="collapsible-body">
 <ol>
 <li> 2 genggam kerupuk (redam di air biasa 2 jam).</li>
 <li> 200 g ceker.</li>
 </ol>
+</div>
+</li>
 
-
-<h5 class="red-text">Bahan Bumbu Halus</h5>
+<li>
+<div class="collapsible-header"><i class="material-icons">search</i>Bahan Bumbu Halus</div>
+<div class="collapsible-body">
 <ol>
 <li> 4 siung bawang merah.</li>
 <li> 3 siung bawang putih.</li>
@@ -55,9 +68,12 @@
 <li> Air kaldubrebusan ceker (sesuai selera).</li>
 <li> 2 butir telur yang sudah di orak arik.</li>
 </ol>
+</div>
+</li>
 
-
-<h5 class="red-text">Cara Memasak</h5>
+<li>
+<div class="collapsible-header"><i class="material-icons">search</i>Cara Memasak</div>
+<div class="collapsible-body">
 <ol>
 <li> Tumis bumbu hingga matang.</li>
 <li> Tambahkan bakso, ceker, kerupuk yg sudah di rendam, garam, gula, lada, saus tiram, kaldu bubuk. Masak sebentar.</li>
@@ -65,6 +81,21 @@
 <li> Masukkan daun sawi, daun bawang, dan cabe rawit iris, masak hingga sayuran matang.</li>
 </ol>
 </div>
+</li>
+</ul>
 </div>
+
+<nav class="bluechef">
+  <div class="nav-wrapper container" role="navigation">
+    <a href = "index.html">&lt;&lt;Kembali ke halaman utama</a>
+    <a href = "papedatelorayam.html">&lt;Back</a>
+  <a href="#top">|Kembali Ke Atas|</a>
+  <a href = "satelilitayamkhasbali.html">Next&gt;&gt;</a>
+</div>
+</nav>
+
+<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+<script type="text/javascript" src="js/materialize.min.js"></script>
+<script type="text/javascript" src="js/init.js"></script>
   </body>
 </html>
