--- a/latihan7/biodata.html
+++ b/latihan7/biodata.html
@@ -7,21 +7,30 @@
   <link rel="stylesheet" href="css/materialize.min.css" media="screen,projection">
     <link rel="stylesheet" href="css/style.css" media="screen,projection">
     <meta name="viewport" content="width=device-width, initial scale=1.0"/>
-    <script type="text/javascript" src="js/loadpage.js"></script>
   </head >
   <body>
-  <div class="row">
-    <a href="indexresep.html">&lt;&lt;Daftar Resep</a><hr>
+    <nav class="bluechef" role="navigation">
+      <div class="nav-wrapper container">
+        <a href="#" class="brand-logo">MASTER CHEF</a>
+        <ul class="right hide-on-med-and-down">
+          <li><a href="index.html">Beranda</a></li>
+          <li><a href="tujuanweb.html">Tentang Website</a></li>
+          <li><a href="tentangstmikkharisma.html">Tentang STMIK KHARISMA</a></li>
+        </ul>
 
-    <h3 class=" heading red-text">BIODATA</h3>
-    <div class="col m5 s12">
-      <div class="card z-depth-3">
-        <div class="card-image">
-    <img src="img/img1.jpeg" height= "300px" class="img-responsif">
-  </div>
-</div>
-</div>
-<div class="col m7 s12">
+        <ul id="nav-mobile" class="sidenav">
+          <li><a href="index.html">Beranda</a></li>
+      <li><a href="tujuanweb.html">Tentang Website</a></li>
+      <li><a href="tentangstmikkharisma.html">Tentang STMIK KHARISMA</a></li>
+      </ul>
+      <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i
+      class="material-icons">menu</i></a>
+    </div>
+    </nav>
+
+    <div class="container">
+    <h1 class="red-text">BIODATA</h1>
+    <img src="img/img1.jpeg" height= "300px">
       <table>
         <tr>
     <td> Nama : Faustine Wijaya</td>
@@ -40,7 +49,9 @@
   </tr>
 </table>
 </div>
-</div>
 
+<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+<script type="text/javascript" src="js/materialize.min.js"></script>
+<script type="text/javascript" src="js/init.js"></script>
   </body>
 </html>
