--- a/latihan7/papedatelorayam.html
+++ b/latihan7/papedatelorayam.html
@@ -9,24 +9,33 @@
     <title>Papeda telor ayam</title>
   </head>
   <body>
-  <div class="row">
-    <a href="indexresep.html">&lt;&lt;Daftar Resep</a><hr>
+    <nav class="bluechef" role="navigation">
+      <div class="nav-wrapper container">
+        <a href="#" class="brand-logo">Master Chef</a>
+        <ul class="right hide-on-med-and-down">
+          <lli><a href="index.html">Beranda</a></li>
+          <li><a href="tujuanweb.html">Tentang Website</a></li>
+          <li><a href="tentangstmikkharisma.html">Tentang STMIK KHARISMA</a></li>
+        </ul>
+        <ul id="nav-mobile" class="sidenav">
+          <li><a href="index.html">Beranda</a></li>
+          <li><a href="tujuanweb.html">Tentang Website</a></li>
+            <li><a href="tentangstmikkharisma.html">Tentang STMIK KHARISMA</a></li>
+          </ul>
+          <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i
+            class="material-icons">menu</i></a>
+          </div>
+        </nav>
 
-    <h3 class="heading red-text">Papeda telor ayam</h3>
-    <div class="col m5 s12">
-      <div class="card z-depth-3">
-        <div class="card-image">
-    <img class="blockmenu"src="img/papeda.jpg" alt="papeda" class="img-responsif">
-  </div>
-</div>
-</div>
-<div class="col m7 s12">
-    <p>Papeda <a class="nav" href ="#bahan/telur">telor</a> <a class="nav" href="#bahan/ayam">ayam</a> Kapurung (Papeda) Makanan khas Papua ini berbahan dasar telur ayam.</p> <p> Ya masyarakat Papua sering menambahkan rempah khas Papua pada olahan ayam pedasnya ini. Sebetulnya tidak harus memakai bumbu balado, kamu bisa ganti Cara Membuat Papeda Telur.</p>
+<div class="container">
+    <h1 class="red-text">Papeda telor ayam</h1>
+    <img class="blockmenu"src="img/papeda.jpg" alt="papeda" class="gambar-resep">
+    <p>Papeda <a href ="bahan/telur.html">telor</a> <a href="bahan/ayam.html">ayam</a> Kapurung (Papeda) Makanan khas Papua ini berbahan dasar telur ayam.</p> <p> Ya masyarakat Papua sering menambahkan rempah khas Papua pada olahan ayam pedasnya ini. Sebetulnya tidak harus memakai bumbu balado, kamu bisa ganti Cara Membuat Papeda Telur.</p>
 <p>Cara Membuat Papeda? Apa yang muncul dalam benak Anda jika mendengar kata Papeda? Apakah bubur dari sagu, dengan kuah kari? Kamu bisa membuat Papeda telor ayam using 8 Bahan-bahan dan 6 cara membuat. begini cara menyajikan.</p>
-</div>
-</div>
-<div class="row">
-<h5 class="red-text">Bahan Utama</h5>
+<ul class="collapsible">
+<li>
+<div class="collapsible-header"><i class="material-icons">search</i>Bahan Utama</div>
+<div class="collapsible-body">
 <ol>
 <li> 1 butir telor ayam.</li>
 <li> kaldu bubuk dan garam.</li>
@@ -37,9 +46,12 @@
 <li> 5 sendok sayur air.</li>
 <li> bubuk boncabe jika suka/bisa skip .</li>
 </ol>
+</div>
+</li>
 
-
-<h5 class="red-text">Cara Memasak</h5>
+<li>
+<div class="collapsible-header"><i class="material-icons">search</i>Cara Memasak</div>
+<div class="collapsible-body">
 <ol>
 <li> Kocok lepas telor dengan sedikit garam dan lada bubuk</li>
 <li> Campur tepung, air dan garam, aduk-aduk bila terlalu kental bisa ditambah air lagi.</li>
@@ -49,6 +61,21 @@
 <li> Ulangi sampai adonan habis. Siap dihidangkan dengan cocolan saus atau mayonaise.</li>
 </ol>
 </div>
+</li>
+</ul>
 </div>
+
+<nav class="bluechef">
+  <div class="nav-wrapper container" role="navigation">
+    <a href="index.html">&lt;&lt;Kembali Ke Halaman Utama</a>
+    <a href = "nasibakeporkalimantantimur.html">&lt;Back</a>
+    <a href="#top">|Kembali Ke Atas|</a>
+    <a href = "seblakbandung.html">Next&gt;&gt;</a>
+  </div>
+</nav>
+
+<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+<script type="text/javascript" src="js/materialize.min.js"></script>
+<script type="text/javascript" src="js/init.js"></script>
   </body>
 </html>
