--- a/latihan7/sopkonro.html
+++ b/latihan7/sopkonro.html
@@ -9,27 +9,37 @@
     <title> Sop Konro</title>
   </head>
   <body>
-    <div class="row">
-      <a href="indexresep.html">&lt;&lt;Daftar Resep</a><hr>
+    <nav class="bluechef" role="navigation">
+      <div class="nav-wrapper container">
+        <a href="#" class="brand-logo">MASTER CHEF</a>
+        <ul class="right hide-on-med-and-down">
+          <li><a href="index.html">Beranda</a></li>
+          <li><a href="tujuanweb.html">Tentang Website</a></li>
+          <li><a href="tentangstmikkharisma.html">Tentang STMIK KHARISMA</a></li>
+        </ul>
 
-    <h3 class="red-text">Sop Konro</h3>
-    <div class="col m5 s12">
-      <div class="card z-depth-3">
-        <div class="card-image">
-    <img src="img/konro.jfif" alt="konro" class="img-responsif">
-  </div>
-</div>
-</div>
-<div class="col m7 s12">
+        <ul id="nav-mobile" class="sidenav">
+          <li><a href="index.html">Beranda</a></li>
+      <li><a href="tujuanweb.html">Tentang Website</a></li>
+      <li><a href="tentangstmikkharisma.html">Tentang STMIK KHARISMA</a></li>
+      </ul>
+      <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i
+      class="material-icons">menu</i></a>
+    </div>
+    </nav>
+
+    <div class="container">
+    <h1 class="red-text">Sop Konro</h1>
+    <img class="blockmenu"src="img/konro.jfif" alt="konro" class="gambar-resep">
     <p>Sup Konro adalah masakan sup iga sapi khas Indonesia yang berasal dari tradisi Bugis dan Makassar. Sup ini biasanya dibuat dengan bahan iga sapi atau daging sapi.Masakan berkuah warna coklat kehitaman ini biasa dimakan dengan burasa dan ketupat yang dipotong-potong terlebih dahulu.
        Warna gelap ini berasal dari buah kluwek yang memang berwarna hitam. Bumbunya relatif "kuat" akibat digunakannya ketumbar. Rasa pedas dan berbumbu ini dibuat dari campuran rempah-rempah, seperti ketumbar, keluwak (buah yang menyebabkan masakan berwarna hitam), sedikit pala, kunyit, kencur, kayu manis, asam, daun lemon, cengkih, dan daun salam.
       Konro aslinya dimasak berkuah dalam bentuk sup yang kaya rempah, akan tetapi kini terdapat variasi kering yang disebut "Konro bakar" yaitu iga sapi bakar dengan bumbu khas konro. Konro bakar biasanya juga disajikan dengan disertai kuah sup yang terpisah.</p>
-    <p>Kalau kamu pecinta masakan <a class="nav" href="#bahan/dagingsapi">daging sapi</a>, wajib banget cobain menu khas Makassar sop konro. Kuliner lezat ini memadukan iga sapi dengan rasa bumbu rempah-rempah dan campuran kluwek.
+    <p>Kalau kamu pecinta masakan <a href="bahan/dagingsapi.html">daging sapi</a>, wajib banget cobain menu khas Makassar sop konro. Kuliner lezat ini memadukan iga sapi dengan rasa bumbu rempah-rempah dan campuran kluwek.
       Sop konro merupakan salah satu makanan yang diburu ketika berwisata ke Makassar. Jika kamu belum sempat ke ibu kota Sulawesi Selatan, bikin saja sop konro di rumah. Beirkut ini resep dan cara membuatnya.</p>
-    </div>
-  </div>
-  <div class="row">
-  <h5 class="red-text">Bahan Utama</h5>
+    <ul class="collapsible">
+      <li>
+<div class="collapsible-header"><i class="material-icons">search</i>Bahan Utama</div>
+<div class="collapsible-body">
 <ol>
 <li> 1 kg iga sapi.</li>
 <li> 1700 ml air.</li>
@@ -41,9 +51,12 @@
 <li> Minyak secukupnya untuk menumis.</li>
 <li> Gula pasir,garam,kaldu sapi bubuk secukupnya.</li>
 </ol>
+</div>
+</li>
 
-
-<h5 class="red-text">Bahan Bumbu Halus</h5>
+<li>
+<div class="collapsible-header"><i class="material-icons">search</i>Bahan Bumbu Halus</div>
+<div class="collapsible-body">
 <ol>
 <li> 10 siung bawang merah.</li>
 <li> 6 siung bawang putih.</li>
@@ -57,17 +70,23 @@
 <li> 1 sdt ketumbar bubuk.</li>
 <li> 1/4 pala bubuk.</li>
 </ol>
+</div>
+</li>
 
-
-<h5 class="red-text">Bahan Pelengkap</h5>
+<li>
+<div class="collapsible-header"><i class="material-icons">search</i>Bahan Pelengkap</div>
+<div class="collapsible-body">
 <ol>
 <li> Nasi putih atau buras.</li>
 <li> Bawang goreng.</li>
 <li> Sambel & jeruk nipis.</li>
 </ol>
+</div>
+</li>
 
-
-<h5 class="red-text">Cara Memasak</h5>
+<li>
+<div class="collapsible-header"><i class="material-icons">search</i>Cara Memasak</div>
+<div class="collapsible-body">
 <ol>
 <li> Presto iga sapi hingga empuk dengan air secukupnya,saring ambil kaldunya 1 liter.</li>
 <li> Pindahkan kepanci biasa,masukan iga dan kaldunya lalu tambah air biasa 700 ml atau secukupnya.</li>
@@ -76,6 +95,21 @@
 <li> Sajikan dimangkok saji lalu taburi bawang goreng.
 </ol>
 </div>
+</li>
+</ul>
 </div>
+
+<nav class="bluechef">
+  <div class="nav-wrapper container" role="navigation">
+  <a href = "index.html">&lt;&lt;Kembali ke halaman utama</a>
+  <a href = "buburmanado.html">&lt;Back</a>
+  <a href="#top">|Kembali Ke Atas|</a>
+  <a href = "rawonsurabaya.html">Next&gt;&gt;</a>
+</div>
+</nav>
+
+<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+<script type="text/javascript" src="js/materialize.min.js"></script>
+<script type="text/javascript" src="js/init.js"></script>
   </body>
 </html>
