--- a/latihan7/sotopadang.html
+++ b/latihan7/sotopadang.html
@@ -9,36 +9,48 @@
     <title>Soto Padang</title>
   </head>
   <body>
-    <div class="row">
-      <a href="indexresep.html">&lt;&lt;Daftar Resep</a><hr>
-    <h3 class="heading red-text"> Soto Padang </h3>
-    <div class="col m5 s12">
-      <div class="card z-depth-3">
-        <div class="card-image">
-    <img src="img/soto.jpg" alt="soto" class="img-responsif">
-  </div>
-</div>
-</div>
-<div class="col m7 s12">
+    <nav class="bluechef" role="navigation">
+      <div class="nav-wrapper container">
+        <a href="#" class="brand-logo">MASTER CHEF</a>
+        <ul class="right hide-on-med-and-down">
+          <li><a href="index.html">Beranda</a></li>
+          <li><a href="tujuanweb.html">Tentang Website</a></li>
+          <li><a href="tentangstmikkharisma.html">Tentang STMIK KHARISMA</a></li>
+        </ul>
+
+        <ul id="nav-mobile" class="sidenav">
+      <li><a href="index.html">Beranda</a></li>
+      <li><a href="tujuanweb.html">Tentang Website</a></li>
+      <li><a href="tentangstmikkharisma.html">Tentang STMIK KHARISMA</a></li>
+      </ul>
+      <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+    </div>
+    </nav>
+
+    <div class="container">
+    <h1 class="red-text"> Soto Padang </h1>
+    <img class="blockmenu"src="img/soto.jpg" alt="soto" class="gambar-resep">
 <p>Seperti banyak kuliner lain di Indonesia, soto merupakan hasil akulturasi budaya antara masyarakat Indonesia dengan masyarakat pendatang. Soto muncul sebagai hasil interaksi masyarakat Indonesia dengan bangsa Tiongkok yang datang ke Indonesia. Menurut Dennys Lombard dalam buku “Nusa Jawa: Silang Budaya”, soto merupakan transformasi dari hidangan Tiongkok yang disebut Caudo. Itu pula sebabnya soto memiliki beberapa nama panggilan yang berbeda di beberapa daerah, seperti Coto di Makassar, Tauto di Pekalongan, dll. Tapi di sebagian besar daerah di Indonesia, nama ‘Caudo’ berubah jadi ‘Soto’.</p>
   <p>Belum lengkap rasanya menikmati masakan Minang kalau belum mencoba yang
-    namanya <a class="nav" href="#bahan/soto">Soto</a> Padang. Meskipun banyak masakannya dilabeli dengan kata
+    namanya <a href="bahan/soto.html">Soto</a> Padang. Meskipun banyak masakannya dilabeli dengan kata
     “Padang”, seperti halnya pada satai ataupun rendang, bukan berarti
     semuanya memiliki kesamaan rasa. Bagi yang menggemari masakan Padang
      namun belum mengenal yang satu ini, maka pastinya akan terkejut dengan
       keunikan rasa serta presentasinya.</p>
-    </div>
-  </div>
-  <div class="row">
-<h5 class="red-text">Bahan Utama</h5>
+<ul class="collapsible">
+  <li>
+    <div class="collapsible-header"><i class="material-icons">search</i>Bahan Utama</div>
+    <div class="collapsible-body">
   <ol>
-   <li> 500 gram <a class="nav" href="#bahan/dagingsapi">daging sapi</a> (campur dengan tulang supaya kaldunya lebih kerasa).</li>
+   <li> 500 gram <a href="bahan/dagingsapi.html">daging sapi</a> (campur dengan tulang supaya kaldunya lebih kerasa).</li>
    <li> 2 liter air.</li>
   <li> minyak goreng untuk menumis.</li>
    </ol>
+ </div>
 
-
-<h5 class="red-text">Bahan Cempelung</h5>
+ <li>
+   <div class="collapsible-header"><i class="material-icons">search</i>Bahan Cempelung</div>
+   <div class="collapsible-body">
 <ol>
   <li>  2 batang sereh digeprek.</li>
   <li>  3 lembar daun salam.</li>
@@ -49,9 +61,12 @@
   <li>  4 cm kayu manis.</li>
   <li>  2 batang daun bawang diiris.</li>
  </ol>
+</div>
+</li>
 
-
-<h5 class="red-text">Bahan Bumbu</h5>
+<li>
+  <div class="collapsible-header"><i class="material-icons">search</i>Bumbu</div>
+  <div class="collapsible-body">
 <ol>
    <li> 10 siung bawang putih.</li>
    <li> 6 buah bawang merah.</li>
@@ -63,9 +78,12 @@
    <li> 2 sdt lada bubuk.</li>
    <li> garam.</li>
  </ol>
+</div>
+</li>
 
-
-<h5 class="red-text">Bahan Bumbu Pelengkap</h5>
+<li>
+  <div class="collapsible-header"><i class="material-icons">search</i>Bumbu Pelengkap</div>
+  <div class="collapsible-body">
 <ol>
   <li>sohun siram dengan air panas, rendam sebentar, angkat dan tiriskan.</li>
   <li>perkedel kentang.</li>
@@ -76,9 +94,12 @@
   <li>kecap.</li>
   <li>cuka.</li>
 </ol>
+</div>
+</li>
 
-
-<h5 class="red-text">Cara Memasak</h5>
+<li>
+  <div class="collapsible-header"><i class="material-icons">search</i>Cara Masak</div>
+  <div class="collapsible-body">
 <ol>
   <li>Rebus daging sampai mendidih keluar buihnya, buah buih yang mengapung, masukkan semua bahan cemplung, lanjutkan merebus sampai daging empuk, masukan daun bawang, tunggu layu, matikan kompor, angkat daging, dan tunggu dingin.</li>
   <li>Panaskan minyak goreng, tumis bumbu halus sampai wangi, campur bumbu yang sudah ditumis ke dalam air rebusan daging, masak sebentar sampai bumbu dan kaldu menyatu. koreksi rasa.</li>
@@ -87,6 +108,23 @@
   <li>Sajikan.</li>
 </ol>
 </div>
+</li>
+</ul>
 </div>
+
+<nav class="bluechef">
+  <div class="nav-wrapper container" role="navigation">
+    <a href = "index.html">&lt;&lt;Kembali ke halaman utama</a>
+    <a href = "pallubasa.html">&lt;Back</a>
+  <a href="#top">|Kembali Ke Atas|</a>
+  <a href = "buburmanado.html">Next&gt;&gt;</a>
+</div>
+</nav>
+
+<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+
+<script type="text/javascript" src="js/materialize.min.js"></script>
+<script type="text/javascript" src="js/init.js"></script>
+
   </body>
 </html>
