--- a/latihan7/tentangstmikkharisma.html
+++ b/latihan7/tentangstmikkharisma.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-<script type="text/javascript" src="js/loadpage.js"></script>
   <head>
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
@@ -10,26 +9,37 @@
     <title>TENTANG STMIK KHARISMA</title>
   </head>
   <body>
-    <div class="row">
-      <a href="indexresep.html">&lt;&lt;Daftar Resep</a><hr>
-    <h3 class="heading red-text">STMIK KHARISMA MAKASSAR </h3>
-    <div class="col m5 s12">
-      <div class="card z-depth-3">
-        <div class="card-image">
-        <img src="img/kampus.jpg" class="img-responsif">
-      </div>
+    <nav class="bluechef" role="navigation">
+      <div class="nav-wrapper container">
+        <a href="#" class="brand-logo">MASTER CHEF</a>
+        <ul class="right hide-on-med-and-down">
+          <li><a href="index.html">Beranda</a></li>
+          <li><a href="tujuanweb.html">Tentang Website</a></li>
+          <li><a href="tentangstmikkharisma.html">Tentang STMIK KHARISMA</a></li>
+        </ul>
+
+        <ul id="nav-mobile" class="sidenav">
+      <li><a href="index.html">Beranda</a></li>
+      <li><a href="tujuanweb.html">Tentang Website</a></li>
+      <li><a href="tentangstmikkharisma.html">Tentang STMIK KHARISMA</a></li>
+      </ul>
+      <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i
+      class="material-icons">menu</i></a>
     </div>
-  </div>
-  <div class="col m7 s12">
+    </nav>
+
+    <div class="container">
+    <h1 class="red-text">STMIK KHARISMA MAKASSAR </h1>
+        <img src="img/kampus.jpg">
     <p>Sekolah Tinggi Manajemen Informatika dan Komputer (STMIK) Kharisma Makassar adalah perguruan tinggi
      bidang informatika dan komputer yang berdiri di Makassar pada 29 Maret 2000 yang ditandai dengan terbitnya
       Surat Keputusan Dirjen Pendidikan Tinggi Departemen Pendidikan Nasional nomor 33/D/O/2000 tanggal 29 Maret 2000.
       STMIK Kharisma Makassar hingga saat ini telah menghasilkan lebih dari 1000 alumni yang sebagian besar telah
       terserap sebagai tenaga kerja di berbagai bidang.</p>
-</div>
-</div>
-<div class="row">
-    <img src="img/logo.jpg" width="200px" class="img-responsif">
+
+
+
+    <img class="blockmenu" src="img/logo.jpg" width="200px">
     <table>
       <tr>
         <td>Didirikan : 2000</td>
@@ -47,6 +57,10 @@
         </tr>
       </table>
 </div>
-</div>
+
+<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+<script type="text/javascript" src="js/materialize.min.js"></script>
+<script type="text/javascript" src="js/init.js"></script>
+
   </body>
 </html>
