--- a/uas/K-FOOD/detailkuah.html
+++ b/uas/K-FOOD/detailkuah.html
@@ -111,8 +111,8 @@
       <script type="text/javascript">
       document.addEventListener("DOMContentLoaded", function() {
         var urlParams = new URLSearchParams(window.location.search);
-      var nama_resep = urlParams.get("nama_resep");
-        getKuahDetail( nama_resep);
+      var id_resep = urlParams.get("id_resep");
+        getGorenganDetail( id_resep);
       });
     </script>
 
