--- a/uas/K-FOOD/detailkuah.html
+++ b/uas/K-FOOD/detailkuah.html
@@ -88,7 +88,7 @@
         <div class="container">
           <h3 class="data center"></h3>
           <div class="row">
-            <div id="kuahdetail">
+            <div id="gorengandetail">
             </div>
           </div>
         </div>
