--- a/uas/K-FOOD/detailgorengan.html
+++ b/uas/K-FOOD/detailgorengan.html
@@ -84,7 +84,7 @@
 
       <div class="container">
 
-        <h1 class="my-4">KOREAN FRIED FOOD</h1>
+        <h1 class="my-4">Detail KOREAN FOOD</h1>
         <!-- /.row -->
         <div class="container">
           <h3 class="data center"></h3>
