--- a/uas/K-FOOD/detailkuah.html
+++ b/uas/K-FOOD/detailkuah.html
@@ -83,7 +83,7 @@
 
       <div class="container">
 
-        <h1 class="my-4">KOREAN SAUCE FOOD</h1>
+        <h1 class="my-4">DETAIL KOREAN FOOD</h1>
 
         <div class="container">
           <h3 class="data center"></h3>
