--- a/latihan7/indexresep.html
+++ b/latihan7/indexresep.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
-    <title>Resep Masakan Nusantara</title>
+    <title>Resep Kuliner Tradisional</title>
   </head>
   <body>
     <nav class="bluechef" role="navigation">
@@ -33,28 +33,28 @@
     </nav>
     <div class="container">
       <br>
-      <h4 class="bluechef-text">Resep Masakan Nusantara</h4>
+      <h4 class="bluechef-text">Sebelas Resep Kuliner Tradisional</h4>
         <div class="row">
           <div class="col m5 s12">
             <div class="card z-depth-3">
               <div class="card-image">
-                <img class="responsive-img" src="img/kuliner.jpg" alt="">
+                <img class="responsive-img" src="img/all.jpg" alt="kuliner">
               </div>
             </div>
           </div>
           <div class="col m7 s12">
             <div class="collection">
-              <a class="collection-item" href="ayambaboto.html">Ayam Baboto Khas Papua</a>
-              <a class="collection-item" href="ayamgorengsasando.html">Ayam Goreng Sasando Khas NTT</a>
-              <a class="collection-item" href="ayamlodho.html">Ayam Lodho Khas Tulungagung</a>
-              <a class="collection-item" href="ikankuahkuning.html">Ikan Kuah Kuning Khas Papua</a>
-              <a class="collection-item" href="krengsengankoyo.html">Kerengsengan Koyo dan Urat Sapi Khas Jatim</a>
-              <a class="collection-item" href="nasibakepor.html">Nasi Bakepor Khas Kutai Kartanegara</a>
-              <a class="collection-item" href="pallubasa.html">Pallubasa Khas Makassar</a>
-              <a class="collection-item" href="pempek.html">Pempek Palembang</a>
-              <a class="collection-item" href="satelilit.html">Sate Lilit Khas Bali</a>
-              <a class="collection-item" href="seblak.html">Seblak Bandung</a>
-              <a class="collection-item" href="tahutek.html">Tahu Tek Surabaya</a>
+              <a class="collection-item" href="ayamgorengsasando.html">Ayam Goreng Sasando</a>
+              <a class="collection-item" href="ayamlodhokhastulungagung.html">Ayam Lodho Khas Tulungagung</a>
+              <a class="collection-item" href="buburmanado.html">Bubur Manado</a>
+              <a class="collection-item" href="nasibakeporkalimantantimur.html">Nasi Bakepor Kalimantan Timur</a>
+              <a class="collection-item" href="pallubasa.html">Pallubasa</a>
+              <a class="collection-item" href="papedatelorayam.html">Papeda Telor Ayam</a>
+              <a class="collection-item" href="rawonsurabaya.html">Rawon Surabaya</a>
+              <a class="collection-item" href="satelilitayamkhasballi.html">Sate Lilit Ayam Khas Bali</a>
+              <a class="collection-item" href="seblakbandung.html">Seblak Bandung</a>
+              <a class="collection-item" href="sopkonro.html">Sop Konro</a>
+              <a class="collection-item" href="sotopadang.html">Soto Padang</a>
             </div>
           </div>
           </div>
