--- a/latihan7/indexresep.html
+++ b/latihan7/indexresep.html
@@ -15,7 +15,7 @@
       <div class="nav-wrapper container">
         <a href="#" class="brand-logo white-text">
           <img src="img/logo.png" alt="logo" style="height:38px;">
-          Resep Masakan
+          Resep 
         </a>
         <ul class="right hide-on-med-and-down">
           <li><a class="white-text" href="index.html">Home</a></li>
