--- a/latihan7/indexresep.html
+++ b/latihan7/indexresep.html
@@ -14,8 +14,8 @@
     <nav class="bluechef" role="navigation">
       <div class="nav-wrapper container">
         <a href="#" class="brand-logo white-text">
-          <img src="img/logo.png" alt="logo" style="height:38px;">
-          Resep 
+          <img src="img/logo6.png" alt="logo" style="height:38px;">
+          Master Chef
         </a>
         <ul class="right hide-on-med-and-down">
           <li><a class="white-text" href="index.html">Home</a></li>
