--- a/latihan7/ayamgorengsasandokhasnusatenggaratimur.html
+++ b/latihan7/ayamgorengsasandokhasnusatenggaratimur.html
@@ -11,7 +11,10 @@
   <body>
     <nav class="bluechef" role="navigation">
       <div class="nav-wrapper container">
-        <a href="#" class="brand-logo">MASTER CHEF</a>
+        <a href="#" class="brand-logo white-text">
+          <img src="img/logo6.png" alt="logo" style="height:38px;">
+          Master Chef
+        </a>
         <ul class="right hide-on-med-and-down">
           <li><a href="index.html">Beranda</a></li>
           <li><a href="tujuanweb.html">Tentang Website</a></li>
