--- a/uas/K-FOOD/resep.html
+++ b/uas/K-FOOD/resep.html
@@ -118,6 +118,68 @@
         </div>
       </div>
     </div>
+    <div class="row">
+    <div class="col-lg-4 col-sm-6 portfolio-item">
+      <div class="card h-100">
+        <a href="#"><img class="card-img-top" src="assets/img/jajangpong.jpg" alt="jjangppong"></a>
+        <div class="card-body">
+          <h4 class="card-title">
+            <a href="jajangpong.html">JAJANGPPONG</a>
+          </h4>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-4 col-sm-6 portfolio-item">
+      <div class="card h-100">
+        <a href="#"><img class="card-img-top" src="assets/img/nasigorengg.jpg" alt="nasigorengkimchi"></a>
+        <div class="card-body">
+          <h4 class="card-title">
+            <a href="nasigoreng.html">KIMCHI FRIED RICE</a>
+          </h4>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-4 col-sm-6 portfolio-item">
+      <div class="card h-100">
+        <a href="#"><img class="card-img-top" src="assets/img/tangsuyuk.jpg" alt="tangsuyuk"></a>
+        <div class="card-body">
+          <h4 class="card-title">
+            <a href="tangsuyuk.html">TANGSUYUK</a>
+          </h4>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-4 col-sm-6 portfolio-item">
+      <div class="card h-100">
+        <a href="#"><img class="card-img-top" src="assets/img/galbitang.jpg" alt="galbitang"></a>
+        <div class="card-body">
+          <h4 class="card-title">
+            <a href="galbitang.html">GALBITANG</a>
+          </h4>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-4 col-sm-6 portfolio-item">
+      <div class="card h-100">
+        <a href="#"><img class="card-img-top" src="assets/img/ttekbokkii.jpg" alt="tteokbokki"></a>
+        <div class="card-body">
+          <h4 class="card-title">
+            <a href="tteokbokki.html">TTEOKBOKKI</a>
+          </h4>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-4 col-sm-6 portfolio-item">
+      <div class="card h-100">
+        <a href="#"><img class="card-img-top" src="assets/img/samgyetang.jpg" alt="samgyetang"></a>
+        <div class="card-body">
+          <h4 class="card-title">
+            <a href="samgyetang.html">SAMGYETANG</a>
+          </h4>
+        </div>
+      </div>
+    </div>
+  </div>
 
 
   </div>
